--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <title>Hua Feng </title>
+</head>
+<body>
+    <table border="1">
+        <tr>
+            <th><a href="profile.html">プロフィール</a></th>
+            <th><a href="achievement.html">実績紹介</a></th>              
+        </tr>
+    </table>
+    <!--<object data="./image/okinawa.jpg" type="image/jpeg" width="640" height="360">-->
+        <image src="./image/okinawa.jpg" width="1440" height="1080" alt="okinawa sea">    
+    <!--</object>-->
+
+</body>    
+
+
+</html>
