--- a/achievement.html
+++ b/achievement.html
@@ -16,7 +16,7 @@
     <h2>通信メーカー向け社内アカウント管理システム(横浜)</h2>
     2019/04～2019/09
     <hr>
-    <h2>一般ユーザー向け受発注管理システムマニュアル(日本)</h2>
+    <h2>一般ユーザー向け受発注管理システムマニュアル(横浜)</h2>
     2018/10～2019/03
     <hr>
     <h2>銀行機関向け投信販売業務支援システム(川崎)</h2>
@@ -25,7 +25,7 @@
     <h2>通信メーカー向け社内ログ分析システム(横浜)</h2>
     2018/01～2018/04
     <hr>
-    <h2>工場向け品質検査システム(神奈川県内)</h2>
+    <h2>工場向け品質検査システム(平塚)</h2>
     2017/07～2017/11
     <hr>
     <h2>外国為替システム(川崎)</h2>
