--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!--<object data="./image/okinawa.jpg" type="image/jpeg" width="640" height="360">-->
         <image src="./image/okinawa.jpg" width="1440" height="1080" alt="okinawa sea">    
     <!--</object>-->
-
+    <hr>
+    <center>Copyright 2020 - 2030 HUAFENG</center>
 </body>    
 
 
