--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <title>Hua Feng </title>
 </head>
 <body>
-    <table border="1">
+    <table border="0">
         <tr>
             <th><a href="profile.html">プロフィール</a></th>
-            <th><a href="achievement.html">実績紹介</a></th>              
+            <th><a href="achievement.html">実績紹介</a></th> 
+            <th><a href="strength.html">強み</a></th>  
+            <th><a href="news.html">ニュースリリース</a></th>            
         </tr>
+
     </table>
     <!--<object data="./image/okinawa.jpg" type="image/jpeg" width="640" height="360">-->
-        <image src="./image/okinawa.jpg" width="1440" height="1080" alt="okinawa sea">    
+        <image src="./image/okinawa.jpg" width="1440" height="756" alt="okinawa sea">    
     <!--</object>-->
     <hr>
     <center>Copyright 2020 - 2030 HUAFENG</center>
