--- a/news.html
+++ b/news.html
@@ -11,6 +11,10 @@
         <dd>
             開業届を提出致しました。
         </dd>
+		<dt>2020年7月1日</dt>
+        <dd>
+            大手通信メーカー向けシステム開発(Java)提供開始。
+        </dd>
 
 
     </dl>
