Adding java silver

--- a/news.html
+++ b/news.html
@@ -7,13 +7,17 @@
 <body>
    <div class="NewsRelease" id="LoadNews">
     <dl>
-        <dt>2020年6月1日</dt>
+        <dt>2020年9月22日</dt>
         <dd>
-            開業届を提出致しました。
-        </dd>
+            Oracle Certified Java Programmer,Silver SE 8認定取得。
+        </dd>        
 		<dt>2020年7月1日</dt>
         <dd>
             大手通信メーカー向けシステム開発(Java)提供開始。
+        </dd>
+        <dt>2020年6月1日</dt>
+        <dd>
+            開業届を提出致しました。
         </dd>
 
 
