--- a/news.html
+++ b/news.html
@@ -7,11 +7,15 @@
 <body>
    <div class="NewsRelease" id="LoadNews">
     <dl>
+        <dt>2020年10月17日</dt>
+        <dd>
+            PHP7技術者認定初級試験 合格。
+        </dd>        
         <dt>2020年9月22日</dt>
         <dd>
             Oracle Certified Java Programmer,Silver SE 8認定取得。
         </dd>        
-		<dt>2020年7月1日</dt>
+	<dt>2020年7月1日</dt>
         <dd>
             大手通信メーカー向けシステム開発(Java)提供開始。
         </dd>
@@ -20,10 +24,7 @@
             開業届を提出致しました。
         </dd>
 
-
     </dl>
-
-
 
    </div>
 
