事業内容の追加　ホームページ、通訳

--- a/profile.html
+++ b/profile.html
@@ -13,10 +13,9 @@
     
     <h2>設立</h2>2020年6月1日
     
-    <h2>事業内容</h2> ソフトウェア開発
-        　
-
+    <h2>事業内容</h2> 
+    <li>コンピューターソフトウェアの企画、設計、開発、メンテンナンスおよび販売</li>
+    <li>インターネットホームページの企画、制作、運用</li>
+    <li>通訳、翻訳</li>
 </body>    
-
-
 </html>
