--- a/news.html
+++ b/news.html
@@ -7,9 +7,13 @@
 <body>
    <div class="NewsRelease" id="LoadNews">
     <dl>
-        <dt>2020年10月17日</dt>
+        <dt>2020年11月29日</dt>
         <dd>
-            PHP7技術者認定初級試験 合格。
+            ウェブデザイン3級試験合格。
+        </dd>
+	<dt>2020年10月17日</dt>
+        <dd>
+            PHP7技術者認定初級試験合格。
         </dd>        
         <dt>2020年9月22日</dt>
         <dd>
@@ -29,6 +33,5 @@
    </div>
 
 </body>    
-
 
 </html>
