modify index to English

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
     <table border="0">
         <tr>
-            <th><a href="profile.html">プロフィール</a></th>
-            <th><a href="achievement.html">実績紹介</a></th> 
-            <th><a href="strength.html">強み</a></th>  
-            <th><a href="news.html">ニュースリリース</a></th>            
+            <th><a href="profile.html">Profile</a></th>
+            <th><a href="achievement.html">Achievement</a></th> 
+            <th><a href="strength.html">Strength</a></th>  
+            <th><a href="news.html">News</a></th>            
         </tr>
 
     </table>
