--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>Hua Feng </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Software Development </title>
 </head>
 <body>
     <table border="0">
