security management 20201227 pass

--- a/news.html
+++ b/news.html
@@ -7,6 +7,10 @@
 <body>
    <div class="NewsRelease" id="LoadNews">
     <dl>
+        <dt>2020年12月27日</dt>
+        <dd>
+            情報セキュリティマネジメント試験合格。
+	</dd>
         <dt>2020年11月29日</dt>
         <dd>
             ウェブデザイン3級試験合格。
@@ -27,11 +31,7 @@
         <dd>
             開業届を提出致しました。
         </dd>
-
     </dl>
-
    </div>
-
 </body>    
-
 </html>
