web design  level 2

--- a/news.html
+++ b/news.html
@@ -7,13 +7,17 @@
 <body>
    <div class="NewsRelease" id="LoadNews">
     <dl>
+	<dt>2021年2月21日</dt>
+	<dd>
+　　　　    ウェブデザイン技能検定2級合格
+	</dd>
         <dt>2020年12月27日</dt>
         <dd>
             情報セキュリティマネジメント試験合格。
 	</dd>
         <dt>2020年11月29日</dt>
         <dd>
-            ウェブデザイン3級試験合格。
+            ウェブデザイン技能検定3級合格。
         </dd>
 	<dt>2020年10月17日</dt>
         <dd>
