web design level 2

--- a/news.html
+++ b/news.html
@@ -1,41 +1,27 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>news</title>
+<meta charset="UTF-8">
+<title>news</title>
 </head>
 <body>
-   <div class="NewsRelease" id="LoadNews">
-    <dl>
-	<dt>2021年2月21日</dt>
-	<dd>
-            ウェブデザイン技能検定2級合格
-	</dd>
-        <dt>2020年12月27日</dt>
-        <dd>
-            情報セキュリティマネジメント試験合格。
-	</dd>
-        <dt>2020年11月29日</dt>
-        <dd>
-            ウェブデザイン技能検定3級合格。
-        </dd>
-	<dt>2020年10月17日</dt>
-        <dd>
-            PHP7技術者認定初級試験合格。
-        </dd>        
-        <dt>2020年9月22日</dt>
-        <dd>
-            Oracle Certified Java Programmer,Silver SE 8認定取得。
-        </dd>        
-	<dt>2020年7月1日</dt>
-        <dd>
-            大手通信メーカー向けシステム開発(Java)提供開始。
-        </dd>
-        <dt>2020年6月1日</dt>
-        <dd>
-            開業届を提出致しました。
-        </dd>
-    </dl>
-   </div>
-</body>    
+<div class="NewsRelease" id="LoadNews">
+  <dl>
+    <dt>2021年2月21日</dt>
+    <dd>ウェブデザイン技能検定2級合格。</dd>
+    <dt>2020年12月27日</dt>
+    <dd>情報セキュリティマネジメント試験合格。 </dd>
+    <dt>2020年11月29日</dt>
+    <dd>ウェブデザイン技能検定3級合格。</dd>
+    <dt>2020年10月17日</dt>
+    <dd>PHP7技術者認定初級試験合格。</dd>
+    <dt>2020年9月22日</dt>
+    <dd>Oracle Certified Java Programmer,Silver SE 8認定取得。 </dd>
+    <dt>2020年7月1日</dt>
+    <dd>大手通信メーカー向けシステム開発(Java)提供開始。</dd>
+    <dt>2020年6月1日</dt>
+    <dd>開業届を提出致しました。</dd>
+  </dl>
+</div>
+</body>
 </html>
