--- a/index.html
+++ b/index.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Software Development </title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Software Development</title>
+<link href="sample.css" rel="stylesheet" type="text/css">
+<script type="text/javascript">
+function MM_swapImgRestore() { //v3.0
+  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
+}
+function MM_preloadImages() { //v3.0
+  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
+    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
+    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+}
+
+function MM_findObj(n, d) { //v4.01
+  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
+    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
+  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
+  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
+  if(!x && d.getElementById) x=d.getElementById(n); return x;
+}
+
+function MM_swapImage() { //v3.0
+  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
+   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
+}
+</script>
 </head>
-<body>
-    <table border="0">
-        <tr>
-            <th><a href="profile.html">Profile</a></th>
-            <th><a href="achievement.html">Achievement</a></th> 
-            <th><a href="strength.html">Strength</a></th>  
-            <th><a href="news.html">News</a></th>            
-        </tr>
-
-    </table>
-    <!--<object data="./image/okinawa.jpg" type="image/jpeg" width="640" height="360">-->
-        <image src="./image/okinawa.jpg" width="1440" height="756" alt="okinawa sea">    
-    <!--</object>-->
-    <hr>
-    <center>Copyright 2020 - 2030 HUAFENG</center>
-</body>    
-
-
+<body onLoad="MM_preloadImages('image/profile_over.gif','image/achievement_over.gif','image/strength_over.gif','image/news_over.gif')">
+<div id="wrap">
+  <div id="header">
+    <div id="banner"><img src="image/banner.gif" width="800" height="36" alt="banner"></div>
+    <div id="gnavi"><a href="profile.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image1','','image/profile_over.gif',1)"><img src="image/profile.gif" alt="profile" width="200" height="36" id="Image1"></a><a href="achievement.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image2','','image/achievement_over.gif',1)"><img src="image/achievement.gif" alt="achievement" width="200" height="36" id="Image2"></a><a href="strength.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image3','','image/strength_over.gif',1)"><img src="image/strength.gif" alt="Strength" width="200" height="36" id="Image3"></a><a href="news.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image4','','image/news_over.gif',1)"><img src="image/news.gif" alt="News" width="200" height="36" id="Image4"></a></div>
+  </div>
+  <div id="maincontent"> <img src="image/okinawa.jpg" width="800" height="500" alt="okinawa"> </div>
+  <div id="footer"><a href="profile.html">Profile</a> |<a href="achievement.html">Achievement</a>|<a href="strength.html">Strength</a>|<a href="news.html">News</a></div>
+</div>
+</body>
 </html>
