--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>profile</title>
 </head>
-<body>
+<body style="background-color:blue;">
     <h2>所在地</h2>
 
     住所: 〒220-0053 神奈川県横浜市西区藤棚2-212-11
