--- a/achievement.html
+++ b/achievement.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>profile</title>
 </head>
-<body>
+<body style="background-color:powerblue;">
     <h2>大手通信メーカー向けシステム開発(東京)</h2>
     
     2020/07～
