--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>news</title>
 </head>
-<body style="background-color:powerbule;">
+<body style="background-color:powderbule;">
 <div class="NewsRelease" id="LoadNews">
   <dl>
     <dt>2021年2月21日</dt>
