--- a/strength.html
+++ b/strength.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>strength</title>
 </head>
-<body style="background-color:powerblue;">
+<body style="background-color:powderblue;">
     
     <ul>
     <li><h2>多言語ソフトウェア開発提供(日本語、中国語、英語)</h2></li>
