--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ function MM_swapImage() { //v3.0
     <div id="banner"><img src="image/banner.gif" width="800" height="36" alt="banner"></div>
     <div id="gnavi"><a href="profile.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image1','','image/profile_over.gif',1)"><img src="image/profile.gif" alt="profile" width="200" height="36" id="Image1"></a><a href="achievement.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image2','','image/achievement_over.gif',1)"><img src="image/achievement.gif" alt="achievement" width="200" height="36" id="Image2"></a><a href="strength.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image3','','image/strength_over.gif',1)"><img src="image/strength.gif" alt="Strength" width="200" height="36" id="Image3"></a><a href="news.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image4','','image/news_over.gif',1)"><img src="image/news.gif" alt="News" width="200" height="36" id="Image4"></a></div>
   </div>
-  <div id="maincontent"> <img src="image/okinawa.jpg" width="800" height="500" alt="okinawa"> </div>
+  <div id="maincontent"> <img src="image/okinawa.jpg" width="800" height="500" alt="okinawa" class="image-vw"> </div>
   <div id="footer"><a href="profile.html">Profile</a> |<a href="achievement.html">Achievement</a>|<a href="strength.html">Strength</a>|<a href="news.html">News</a></div>
 </div>
 </body>
