FE examination passed

--- a/news.html
+++ b/news.html
@@ -7,6 +7,8 @@
 <body style="background-color:powderblue;">
 <div class="NewsRelease" id="LoadNews">
   <dl>
+    <dt>2021年6月27日</dt>
+    <dd>基本情報技術者試験合格</dd>
     <dt>2021年2月21日</dt>
     <dd>ウェブデザイン技能検定2級合格。</dd>
     <dt>2020年12月27日</dt>
